lab1/Test/L1-A-12-16.output
Error Type B at Line 4
Error Type B at Line 5
Error Type A at Line 8
Error Type A at Line 27
Error Type B at Line 34
Error Type B at Line 41
