lab1/Test/L1-A-12-16.cmm
float ;
int R3ZXU9_N3Q2 ( ) {
  if ( xqvTONhpalj3YBeHD )   WusBVmK1zhhUMp 
else   if ( urLct ) {
    while ( sp3U     if ( P8efm6m_ )     F ;
else     if ( _XHj5of16qYa )     NjDj1u1j_IKv2n7lqA 
      ;
else     if ( :Hvlc2Z0 )     bDq5PuyE6UAYTfoqnV ;
else {
      int Mj_9aY012tC ;
      struct JXJmMUqQAH_N {
        int iKNsQcwtf ;
      }SQQhX2hBvKNAp17 ;
      struct {
        int JNcM0I2Qr9V ;
      }fgHX0YYQrmdazBLVEzs ;
      int RJLF , jLrq ;
      N ;
      g_Sbp09pM4 ;
{
        struct AyKs_Ed2 Krq [ 1422287957 ] = n4Xd0Cte6kCIpO 
          ;
      }      if ( A ) {
        lael ;
      }
      if ( fwn8CdTXZ0IOj3 )       KCbN5vraJ0bQ9riP_ 
        %;
else       h6nylHKtL5VMD ;

    }



    if YvzCqCmamAMuTnw )     return Bu5arjaHp ;
else     q == uMrD3baQi7v9BcmxrB0c / YGF40OgbsWKZh6Q1GRp 
      ( Hz3XJbxDLcHGIZaz9y = CMCOOqkUJJDO || uCpts1dR && 
      lv_dwrWZXDd_qW <= H8B_BiV3i9uJIyeLLyp7 - LMxr5 * - 
      ! TRIwVirBSx3 [ LUDZDeyV && gfLVuI_N < Uxim_BREPPbFgmxih 
      [ ZP = NkzXKoAvzGgefTh95 = zDOPfHOyLZj && QTtX >= 
      oQ - ( OiczSA1oQtd != JtDUq_QlbU6E - ! ( YVLlwXIwzvv2ZdQp 
      = cv3mHQ_ - b / v [ ( AN = LMzeK9vUCYAs8cTfa && < 
      ( wof * Ha8wTh5 ( h7LBUvLgWOAFv , JC4WXEUNHj ) ) ) 
      / CMmSlPN7OYA - hg2kGcRxMM8F ] / ! xpuY ) - ! Xi5HnJpUc9TPX2b 
      / g0YyKz * - 59033181 ) > - p7kBVBbnupd_ ] * ! EOKh2lBxnA4GSFcGMSE 
      ( ) + ! 180454893.659594683 ] ) . eRrYs3h4YyQ ;

  }

}
int zM46UFif 
;
int afbbpw1 , NNR6Moxi 

;
int ;
int nSYtAea_1WVwdzb5q ( int TQ10cpREvFKlLT , int O5fPeqlawKM 
  ) {
}
int ;
